update tmux conf mouse support

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,11 +25,8 @@ bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
 
-# Enable mouse support (works in iTerm)
-set-window-option -g mode-mouse on
-set-option -g mouse-select-pane on
-set-option -g mouse-resize-pane on
-set-option -g mouse-select-window on
+# Enable mouse support
+set -g mouse on
 
 # Allows for faster key repetition
 set -s escape-time 1
