--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,10 @@ bind l select-pane -R
 bind-key v split-window -h
 bind-key b split-window
 # Enable mouse support
-set -g mouse on
+# set -g mouse on
+set -g mouse-select-window on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
 
 # Allows for faster key repetition
 set -s escape-time 1
