--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,10 +14,11 @@ bind l select-pane -R
 bind-key v split-window -h
 bind-key b split-window
 # Enable mouse support
-# set -g mouse on
+#mac: set -g mouse on
 set -g mouse-select-window on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
+set -g mode-mouse on #滑轮翻阅历史
 
 # Allows for faster key repetition
 set -s escape-time 1
